# hw20.01

Desktop/HW2_Django-main/: README.md  catalog5.json  pyproject.toml
Desktop/HW2_Django-main/articles/: urls.py  views.py
Desktop/HW2_Django-main/articles/migrations/: 0001_initial.py  0002_alter_article_is_publication_alter_article_slug.py  0003_alter_article_photo.py
Desktop/HW2_Django-main/articles/templates/articles/: article_confirm_delete.html  article_detail.html  article_form.html  article_list.html
Desktop/HW2_Django-main/catalog/: admin.py  models.py  urls.py  views.py
Desktop/HW2_Django-main/catalog/management/commands/: custom_command.py
Desktop/HW2_Django-main/catalog/migrations/: 0001_initial.py  0002_product_manufactured_at.py  0003_remove_product_manufactured_at_and_more.py
Desktop/HW2_Django-main/catalog/templates/catalog/: contacts.html  home.html  product_detail.html  product_list.html
Desktop/HW2_Django-main/catalog/templates/catalog/includes/: nav_bar.html
Desktop/HW2_Django-main/config/: settings.py  urls.py
